[FIX] text truncate (2 lines) bug fix when using text truncate, height should be declared

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .text-truncate-1-lines {
